--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "nodemon": "^3.1.2"
+    "express": "^4.19.2",
+    "mongoose": "^8.4.0",
+    "nodemon": "^3.1.2",
+    "socket.io": "^4.7.5"
   }
 }
